--- a/metadaten.tex
+++ b/metadaten.tex
@@ -6,8 +6,6 @@
 %======================================================================
 
 \newcommand{\dcsubject}{Masterarbeit}
-% z.B. (Diplom/Studien/Haus)arbeit, Praktikumsbericht, Studie, Beleg, 
-% (Pro/Haupt/Ober)seminar, Seminar usw.
 \newcommand{\dctitle}{Mal schauen ...}
 \newcommand{\dcsubtitle}{~} % Untertitel, falls erforderlich
 
@@ -26,10 +24,9 @@
 \newcommand{\dcprofthird}{Abteilung Back-End of Line}
 
 \newcommand{\dcpruefererst}{\hspace{3pt} Prof. Dr. Stefan E. Schulz}
-\newcommand{\dcprueferzweit}{\hspace{3pt} Prof. Dr. Angela Thränhardt}% Prüfer der Arbeit
-%\newcommand{\dcadvisor}{Prof. Dr. Stefan E. Schulz}% Betreuer der Arbeit
+\newcommand{\dcprueferzweit}{\hspace{3pt} Prof. Dr. Angela Thränhardt}
 
-\newcommand{\dckeywords}{CNT, DFT, C, Au, Pd, Mo}
+\newcommand{\dckeywords}{CNT, CNTFET}
 
 %%======================================================================
 % Einstellungen des Hyperref-Paketes
