--- a/titel.tex
+++ b/titel.tex
@@ -1,4 +1,4 @@
- %======================================================================
+%======================================================================
 %	Titelseite 
 %======================================================================
 
@@ -50,13 +50,13 @@
 %%======================================================================
 %% Subjekt
 %%======================================================================
-\subject{\bf\Huge\dcsubject}
+\subject{\bfseries\Huge\dcsubject}
 
 
 %%======================================================================
 %% Titel
 %%======================================================================
-\title{\sf\Large
+\title{\sffamily\Large
 	\dctitle
 	\\
 	\dcsubtitle
@@ -79,12 +79,9 @@
 \publishers{
 	{\parbox{\textwidth-8em}{
 		\begin{tabbing}
-			{\bf Betreuer:}\quad\=\kill
-			{\bf Gutachter:}	\>\dcpruefererst\\
+			{\bfseries Betreuer:}\quad\=\kill
+			{\bfseries Gutachter:}	\>\dcpruefererst\\
 						\>\dcprueferzweit\\
-%			{\bf Erstgutachter:}	\>\dcpruefererst\\
-%			{\bf Zweitgutachter:}	\>\dcprueferzweit\\
-			%{\bf Zweitkorrektor:}	\>\dcadvisor
 		\end{tabbing}	
 	}}
 }
