some play around

--- a/grundlagen_bte.tex
+++ b/grundlagen_bte.tex
@@ -1,2 +1,2 @@
-\section{Boltzmann-Transport-Gleichungs-Löser}
+\subsection{Boltzmann-Transport-Gleichungs-Löser}
 \label{cha:boltzmanntransportgleichungsloeser}
