--- a/grundlagen_cnt.tex
+++ b/grundlagen_cnt.tex
@@ -3,3 +3,9 @@
 
 \section{Kohlenstoffnanoröhrchen}
 \label{cha:kohlenstoffnanoroehrchen}
+
+\subsection{Geometrische Struktur}
+\label{geometrischestruktur}
+
+\subsection{Elektronische Eigenschaften}
+\label{elektronischeeigenschaften}
