--- a/grundlagen_dft.tex
+++ b/grundlagen_dft.tex
@@ -1,2 +1,5 @@
-\section{Dichtefunktionaltheorie}
+\section{Atomistische Elektronenstrukturrechnung}
+\label{cha:atomistischeelektronenstrukturrechnung}
+
+\subsection{Dichtefunktionaltheorie}
 \label{cha:dichtefunktionaltheorie}
