--- a/grundlagen_nds.tex
+++ b/grundlagen_nds.tex
@@ -1,2 +1,5 @@
-\section{Numerische Gerätesimulation}
+\section{Kontinuumsbeschreibung}
+\label{kontinuumsbeschreibung}
+
+\subsection{Numerische Gerätesimulation}
 \label{cha:numerischegeraetesimulation}
