--- a/grundlagen_negf.tex
+++ b/grundlagen_negf.tex
@@ -1,2 +1,8 @@
-\section{Nichtgleichgewichts-Greensfunktions-Formalismus}
-\label{cha:nichtgleichgewichtsgreensfunktionsformalismus}
+\section{Transportrechnung}
+\label{cha:transportrechnung}
+
+\subsection{Nichtgleichgewichts-Green-Funktionen-Formalismus}
+\label{cha:nichtgleichgewichtsgreenfunktionenformalismus}
+
+\subsection{Landauer-Formalismus}
+\label{cha:landauerformalismus}
