--- a/grundlagen_simulation.tex
+++ b/grundlagen_simulation.tex
@@ -1,5 +1,5 @@
 \chapter{Simulationsmethoden}
 \label{cha:simulationsmethoden}
 
-\section{Allgemeiner Überblick und Multiskalenmodellierung}
-\label{allgemeinerueberblickundmultiskalenmodellierung}
+\section{Multiskalenmodellierung}
+\label{multiskalenmodellierung}
