--- a/masterarbeit-florian-fuchs.tex
+++ b/masterarbeit-florian-fuchs.tex
@@ -25,7 +25,7 @@
   index=totoc,   % Index soll im Inhaltsverzeichnis auftauchen
   listof=totoc,  %
   bibliography=totoc,  %
-  BCOR8mm,   %%?? Bindungskorrektur: 
+  BCOR9mm,   %%?? Bindungskorrektur: 
 %             % BCOR<Breite des Bindungsverlustes> 
 ]{scrreprt}
 %======================================================================
@@ -94,7 +94,7 @@
 }
 \usepackage[rightcaption]{sidecap}
 
-
+\setkomafont{disposition}{\normalcolor\bfseries}	
 %\usepackage{scrhack} % removes a warning, comes with koma script > 3.0
 
 \usepackage{listings}  % Quellcode schön einbinden
