--- a/metadaten.tex
+++ b/metadaten.tex
@@ -6,9 +6,10 @@
 %======================================================================
 
 \newcommand{\dcsubject}{Masterarbeit}
-\newcommand{\dctitle}{Mal schauen ...}
+\newcommand{\dctitle}{Simulation von Feldeffekttransistoren auf Basis von Kohlenstoffnanoröhrchen?}
 \newcommand{\dcsubtitle}{~} % Untertitel, falls erforderlich
 
+\newcommand{\dcauthortitle}{B.Sc.}
 \newcommand{\dcauthorlastname}{Fuchs}
 \newcommand{\dcauthorfirstname}{Florian}
 \newcommand{\dcauthoremail}{fufl@hrz.tu-chemnitz.de} 
@@ -17,16 +18,16 @@
 \newcommand{\dcplace}{Chemnitz} % Ort, kann an der TU meist so bleiben
 \newcommand{\dcuni}{Technische Universität \dcplace}
 \newcommand{\dcdepartfirst}{Fakultät für Naturwissenschaften} % Fakultätsangabe
-\newcommand{\dcproffirst}{Theorie ungeordneter Systeme} % Angabe der Professur
+\newcommand{\dcproffirst}{Theoretische Physik - Simulation neuer Materialien} % Angabe der Professur
 \newcommand{\dcdepartsecond}{Fakultät für Elektrotechnik und Informationstechnik} % Fakultätsangabe
 \newcommand{\dcprofsecond}{Technologien der Nanoelektronik} % Angabe der Professur
-\newcommand{\dcdepartthird}{Fraunhofer Institut für elektronische Nanosysteme} 
+\newcommand{\dcdepartthird}{Fraunhofer Institut für Elektronische Nanosysteme} 
 \newcommand{\dcprofthird}{Abteilung Back-End of Line}
 
 \newcommand{\dcpruefererst}{\hspace{3pt} Prof. Dr. Stefan E. Schulz}
 \newcommand{\dcprueferzweit}{\hspace{3pt} Prof. Dr. Angela Thränhardt}
 
-\newcommand{\dckeywords}{CNT, CNTFET}
+\newcommand{\dckeywords}{Kohlenstoffnanoröhrchen (CNT), Feldeffekttransistor (FET), Multiskalen\-modellierung, Dichtefunktionaltheorie (DFT), Erweiterte Hückel-Methode (EHT), Elektronischer Transport, Nichtgleichgewichts-Green-Funktion (NEGF),  Semiklassisches Modell}
 
 %%======================================================================
 % Einstellungen des Hyperref-Paketes
