--- a/grundlagen_cntfet.tex
+++ b/grundlagen_cntfet.tex
@@ -1,2 +1,11 @@
-\section{Transistoren auf Basis von CNTs}
-\label{cha:transistorenaufbasisvoncnts}
+\section{FET auf CNT-Basis}
+\label{cha:fetaufcntbasis}
+
+\subsection{CNTFET mit Schottkybarrieren}
+\label{cntfetmitschottkybarrieren}
+
+\subsection{MOSFET-ähnlicher CNTFET}
+\label{mosfetaehnlichecntfets}
+
+\subsection{Weitere Transistortypen auf CNT-Basis}
+\label{weiteretransistortypenaufcntBasis}
