--- a/grundlagen_transistor.tex
+++ b/grundlagen_transistor.tex
@@ -1,2 +1,11 @@
 \section{Allgemeiner Überblick über Transistoren}
 \label{cha:allgemeinerueberblickuebertransistoren}
+
+\subsection{Bipolartransistor}
+\label{bipolartransistoren}
+
+\subsection{Feldeffekttransistor}
+\label{feldeffekttransistoren}
+
+\subsection{Weitere Transistortypen}
+\label{weiteretransistortypen}
