--- a/titel.tex
+++ b/titel.tex
@@ -28,18 +28,17 @@
 %%======================================================================
 \titlehead{
 	\vspace*{-1.5cm}
-	% Schriftfamilie wie alle Überschriften, aber nicht fett
-	\usekomafont{disposition}\mdseries 
 	\begin{center}
-		\raisebox{-1ex}{\includegraphics[scale=1.4]{TUC_deutsch_einzeile_CMYK}}\\
+		\raisebox{-1ex}{\includegraphics[scale=1.1]{logo_tu_tailored}}\\
 		\hrulefill \\[1em]
 		{\Large\dcdepartfirst}\\[0.5em] 
 		\dcproffirst\\[0.5em]
 		{\Large\dcdepartsecond}\\[0.5em] 
 		\dcprofsecond
 	\end{center}
+	\vspace*{0.1cm}
 	\begin{center}
-		\raisebox{-1ex}{\includegraphics[scale=1.3]{FHG_LOGO}}\\
+		\raisebox{-1ex}{\includegraphics[scale=1.2]{logo_fhg_tailored}}\\
 		\hrulefill \\[1em]
 		{\Large\dcdepartthird}\\[0.5em] 
 		\dcprofthird\\[0.5em]
@@ -47,16 +46,18 @@
 	\vspace*{0.5cm}
 }
 
+
+
 %%======================================================================
 %% Subjekt
 %%======================================================================
-\subject{\bfseries\Huge\dcsubject}
+\subject{\huge\textnormal{\textsc{\dcsubject}}}
 
 
 %%======================================================================
 %% Titel
 %%======================================================================
-\title{\sffamily\Large
+\title{\huge
 	\dctitle
 	\\
 	\dcsubtitle
@@ -65,7 +66,7 @@
 %%======================================================================
 %% Autor des Dokumentes
 %%======================================================================
-\author{\dcauthorfirstname~\dcauthorlastname}
+\author{\dcauthortitle~\dcauthorfirstname~\dcauthorlastname}
 	
 %%======================================================================
 %% Ort, Datum
@@ -73,31 +74,33 @@
 \date{\dcplace, den \dcdate
 }
 
+
 %%======================================================================
 %% Publishers
 %%======================================================================
-\publishers{
-	{\parbox{\textwidth-8em}{
-		\begin{tabbing}
-			{\bfseries Betreuer:}\quad\=\kill
-			{\bfseries Gutachter:}	\>\dcpruefererst\\
-						\>\dcprueferzweit\\
-		\end{tabbing}	
-	}}
-}
+%\publishers{
+%	{\parbox{\textwidth-8em}{
+%		\begin{tabbing}
+%			{\bfseries Betreuer:}\quad\=\kill
+%			{\bfseries Gutachter:}	\>\dcpruefererst\\
+%						\>\dcprueferzweit\\
+%		\end{tabbing}	
+%	}}
+%}
 
 %%======================================================================
 %% bibliografische Angaben
 %%======================================================================
 \lowertitleback{
 \textbf{\dcauthorlastname, \dcauthorfirstname}\\
-\dctitle\\
+\textit{\dctitle}\\
 %\dcsubject,~\dcdepart\\
 \dcsubject\\
 \dcuni,~\ifcase\month\or
   Januar\or Februar\or März\or April\or Mai\or Juni\or
     Juli\or August\or September\or Oktober\or November\or Dezember\fi
-    ~\number\year
+    ~\number\year\\
+Stichworte: \dckeywords
 }
 
 %%======================================================================
