--- a/masterarbeit-florian-fuchs.tex
+++ b/masterarbeit-florian-fuchs.tex
@@ -180,21 +180,21 @@
 
 \includeonly{    % Gibt an, welche Dateien der include-Befehl 
           % tatsächlich einfuegen darf.
-  metadaten      % Variablen setzen
-  ,titel      % Titelseite, Zusammenfassung und Inhaltsverzeichnis
-  ,einleitung
-  ,grundlagen_cnt
-  ,grundlagen_transistor
-  ,grundlagen_cntfet
-  ,grundlagen_simulation
-  ,grundlagen_dft
-  ,grundlagen_eht
-  ,grundlagen_negf
-  ,grundlagen_atk
-  ,grundlagen_nds
-  ,grundlagen_bte
-  ,ergebnisse
-  ,auswertung
+  metadaten,      % Variablen setzen
+  titel,      % Titelseite, Zusammenfassung und Inhaltsverzeichnis
+  einleitung,
+  grundlagen_cnt,
+  grundlagen_transistor,
+  grundlagen_cntfet,
+  grundlagen_simulation,
+  grundlagen_eht,
+  grundlagen_dft,
+  grundlagen_negf,
+  grundlagen_atk,
+  grundlagen_nds,
+  grundlagen_bte,
+  ergebnisse,
+  auswertung
   % Alle per include einzulesenden Dateien müssen hier angegeben sein!
 }
 
@@ -233,8 +233,8 @@
 \include{grundlagen_transistor}
 \include{grundlagen_cntfet}
 \include{grundlagen_simulation}
-\include{grundlagen_dft}
 \include{grundlagen_eht}
+\include{grundlagen_dft}
 \include{grundlagen_negf}
 \include{grundlagen_atk}
 \include{grundlagen_nds}
