--- a/titel.tex
+++ b/titel.tex
@@ -31,16 +31,16 @@
 	\begin{center}
 		\raisebox{-1ex}{\includegraphics[scale=1.1]{logo_tu_tailored}}\\
 		\hrulefill \\[1em]
-		{\Large\dcdepartfirst}\\[0.5em] 
-		\dcproffirst\\[0.5em]
-		{\Large\dcdepartsecond}\\[0.5em] 
-		\dcprofsecond
+		{\Large\dcdepartsecond}\\[0.2em] 
+		\dcinstitutesecond\\[0.5em]
+%		{\Large\dcdepartsecond}\\[0.5em] 
+%		\dcprofsecond
 	\end{center}
 	\vspace*{0.1cm}
 	\begin{center}
 		\raisebox{-1ex}{\includegraphics[scale=1.2]{logo_fhg_tailored}}\\
 		\hrulefill \\[1em]
-		{\Large\dcdepartthird}\\[0.5em] 
+		{\Large\dcdepartthird}\\[0.2em] 
 		\dcprofthird\\[0.5em]
 	\end{center}
 	\vspace*{0.5cm}
@@ -61,6 +61,7 @@
 	\dctitle
 	\\
 	\dcsubtitle
+	\vspace*{-0.4em}
 }
 
 %%======================================================================
@@ -78,15 +79,16 @@
 %%======================================================================
 %% Publishers
 %%======================================================================
-%\publishers{
-%	{\parbox{\textwidth-8em}{
-%		\begin{tabbing}
-%			{\bfseries Betreuer:}\quad\=\kill
-%			{\bfseries Gutachter:}	\>\dcpruefererst\\
-%						\>\dcprueferzweit\\
-%		\end{tabbing}	
-%	}}
-%}
+\publishers{
+		\begin{tabbing}
+			\hspace*{10.1em}\=\kill
+			\hspace*{4.8em}{Gutachter:}\>\dcexaminerfirst\\[-0.2em]
+								  \>{\small\dcproffirst}\\[0.2em]
+								  \>\dcexaminersecond\\[-0.2em]
+								  \>{\small\dcprofsecond}\\
+		\end{tabbing}	
+	\vspace*{-7em}
+}
 
 %%======================================================================
 %% bibliografische Angaben
@@ -132,10 +134,6 @@ Stichworte: \dckeywords
 				
 \pagenumbering{roman}
 \begin{abstract}
-
-
-%Als Modellsystem fungiert dabei das (8,4)-CNT, welches mit Molybdän, Palladium sowie Gold funktionalisiert wurde. 
-%Anhand der Analyse der Bandstrukturen und des Landauer-Büttiker-Formalismus wird dabei die Beschreibung der Eigenschaften geschehen. Für einige Metalle werden dabei Ergebnisse zum Spinverhalten sowie den elektrischen Eigenschaften bei unterschiedlichen Besetzungsgraden gegeben. Ebenfalls gezeigt werden Ergebnisse zum elektromechanischen Verhalten für die verschiedenen Metalle als auch für verschiedene Besetzungsgrade.    
 
 \end{abstract}
 
