--- a/grundlagen_eht.tex
+++ b/grundlagen_eht.tex
@@ -1,2 +1,5 @@
+\section{Atomistische Elektronenstrukturrechnung}
+\label{cha:atomistischeelektronenstrukturrechnung}
+
 \subsection{Erweiterte Hückelmethode}
 \label{cha:erweitertehueckelmethode}
