--- a/metadaten.tex
+++ b/metadaten.tex
@@ -17,17 +17,18 @@
 
 \newcommand{\dcplace}{Chemnitz} % Ort, kann an der TU meist so bleiben
 \newcommand{\dcuni}{Technische Universität \dcplace}
-\newcommand{\dcdepartfirst}{Fakultät für Naturwissenschaften} % Fakultätsangabe
-\newcommand{\dcproffirst}{Theoretische Physik - Simulation neuer Materialien} % Angabe der Professur
-\newcommand{\dcdepartsecond}{Fakultät für Elektrotechnik und Informationstechnik} % Fakultätsangabe
-\newcommand{\dcprofsecond}{Technologien der Nanoelektronik} % Angabe der Professur
-\newcommand{\dcdepartthird}{Fraunhofer Institut für Elektronische Nanosysteme} 
+\newcommand{\dcdepartsecond}{Fakultät für Naturwissenschaften} % Fakultätsangabe
+\newcommand{\dcinstitutesecond}{Institut für Physik}
+\newcommand{\dcprofsecond}{Theoretische Physik - Simulation neuer Materialien} % Angabe der Professur
+\newcommand{\dcdepartfirst}{Fakultät für Elektrotechnik und Informationstechnik} % Fakultätsangabe
+\newcommand{\dcproffirst}{Technologien der Nanoelektronik} % Angabe der Professur
+\newcommand{\dcdepartthird}{Fraunhofer-Institut für Elektronische Nanosysteme} 
 \newcommand{\dcprofthird}{Abteilung Back-End of Line}
 
-\newcommand{\dcpruefererst}{\hspace{3pt} Prof. Dr. Stefan E. Schulz}
-\newcommand{\dcprueferzweit}{\hspace{3pt} Prof. Dr. Angela Thränhardt}
+\newcommand{\dcexaminerfirst}{Prof. Dr. Stefan E. Schulz}
+\newcommand{\dcexaminersecond}{Prof. Dr. Angela Thränhardt}
 
-\newcommand{\dckeywords}{Kohlenstoffnanoröhrchen (CNT), Feldeffekttransistor (FET), Multiskalen\-modellierung, Dichtefunktionaltheorie (DFT), Erweiterte Hückel-Methode (EHT), Elektronischer Transport, Nichtgleichgewichts-Green-Funktion (NEGF),  Semiklassisches Modell}
+\newcommand{\dckeywords}{Kohlenstoffnanoröhrchen (CNT), Feldeffekttransistor (FET), Multiskalen\-modellierung, Dichtefunktionaltheorie (DFT), Erweiterte Hückel-Methode (EHT), Elektronischer Transport, Nichtgleichgewichts-Green-Funktion (NEGF), Effektive-Massen-Schrödinger-Gleichung}
 
 %%======================================================================
 % Einstellungen des Hyperref-Paketes
