--- a/masterarbeit-florian-fuchs.tex
+++ b/masterarbeit-florian-fuchs.tex
@@ -90,6 +90,7 @@
  amsmath,
  pdfpages,
  graphicx,
+ todonotes
  %url,   % supposed to show links in literatur
 }
 \usepackage[rightcaption]{sidecap}
