--- a/masterarbeit-florian-fuchs.tex
+++ b/masterarbeit-florian-fuchs.tex
@@ -85,6 +85,7 @@
 %  endnotes,    % Fussnoten -> Endnoten
 %  rotating,    % sidewaystable und sidewaysfigure
 %  natbib,      % Bibliographie ohne Klammer etc.
+ ngerman,
  capt-of,
  longtable,
  amsmath,
@@ -174,7 +175,6 @@
 \clubpenalty10000
 \widowpenalty10000
 
-\hyphenation{konnten hexa-gonalen spin-entartung damit wobei function}
 %======================================================================
 %  includeonly
 %======================================================================
@@ -266,7 +266,7 @@
 %\bibliographystyle{IEEEtrans} % Hinweis von Christian
 %\usepackage{url}
 
-\bibliography{literatur} %standart
+\bibliography{literature} %standart
 
 
 %\cleardoublepage
@@ -281,8 +281,6 @@
 \begin{appendix}
 %\include{anhanga}
 %\newpage
-\include{anhangb}
-\include{anhangc}
 %\addcontentsline{toc}{chapter}{B. Danksagung}
 \thispagestyle{empty}
 \chapter{Danksagung}
