forked from gitolite@sim:f.fuchs/masterthesis

--- a/titel.tex
+++ b/titel.tex
@@ -29,7 +29,7 @@
 \titlehead{
 	\vspace*{-1.5cm}
 	\begin{center}
-		\raisebox{-1ex}{\includegraphics[scale=1.1]{logo_tu_tailored}}\\
+		\raisebox{-1ex}{\includegraphics[scale=1.1]{img/logo_tu_tailored}}\\
 		\hrulefill \\[1em]
 		{\Large\dcdepartsecond}\\[0.2em] 
 		\dcinstitutesecond\\[0.5em]
@@ -38,7 +38,7 @@
 	\end{center}
 	\vspace*{0.1cm}
 	\begin{center}
-		\raisebox{-1ex}{\includegraphics[scale=1.2]{logo_fhg_tailored}}\\
+		\raisebox{-1ex}{\includegraphics[scale=1.2]{img/logo_fhg_tailored}}\\
 		\hrulefill \\[1em]
 		{\Large\dcdepartthird}\\[0.2em] 
 		\dcprofthird\\[0.5em]
