metadata and some content adjusted

--- a/metadaten.tex
+++ b/metadaten.tex
@@ -6,29 +6,31 @@
 %======================================================================
 
 \newcommand{\dcsubject}{Masterarbeit}
-\newcommand{\dctitle}{Simulation von Feldeffekttransistoren auf Basis von Kohlenstoffnanoröhrchen?}
+\newcommand{\dctitle}{Simulation von Oberflächenabscheidungsreaktionen?}
 \newcommand{\dcsubtitle}{~} % Untertitel, falls erforderlich
 
 \newcommand{\dcauthortitle}{B.Sc.}
-\newcommand{\dcauthorlastname}{Fuchs}
-\newcommand{\dcauthorfirstname}{Florian}
-\newcommand{\dcauthoremail}{fufl@hrz.tu-chemnitz.de} 
+\newcommand{\dcauthorlastname}{Lorenz}
+\newcommand{\dcauthorfirstname}{Erik E.}
+\newcommand{\dcauthoremail}{erik.e.lorenz@gmail.com} 
 \newcommand{\dcdate}{\today}
 
 \newcommand{\dcplace}{Chemnitz} % Ort, kann an der TU meist so bleiben
 \newcommand{\dcuni}{Technische Universität \dcplace}
-\newcommand{\dcdepartsecond}{Fakultät für Naturwissenschaften} % Fakultätsangabe
-\newcommand{\dcinstitutesecond}{Institut für Physik}
-\newcommand{\dcprofsecond}{Theoretische Physik - Simulation neuer Materialien} % Angabe der Professur
+
+\newcommand{\dcexaminerfirst}{Prof. Dr. Stefan E. Schulz}
 \newcommand{\dcdepartfirst}{Fakultät für Elektrotechnik und Informationstechnik} % Fakultätsangabe
 \newcommand{\dcproffirst}{Technologien der Nanoelektronik} % Angabe der Professur
+
+\newcommand{\dcexaminersecond}{N.N.}
+\newcommand{\dcdepartsecond}{Fakultät für Naturwissenschaften} % Fakultätsangabe
+\newcommand{\dcprofsecond}{N.N.} % Angabe der Professur
+\newcommand{\dcinstitutesecond}{Institut für Physik}
+
 \newcommand{\dcdepartthird}{Fraunhofer-Institut für Elektronische Nanosysteme} 
 \newcommand{\dcprofthird}{Abteilung Back-End of Line}
 
-\newcommand{\dcexaminerfirst}{Prof. Dr. Stefan E. Schulz}
-\newcommand{\dcexaminersecond}{Prof. Dr. Angela Thränhardt}
-
-\newcommand{\dckeywords}{Kohlenstoffnanoröhrchen (CNT), Feldeffekttransistor (FET), Multiskalen\-modellierung, Dichtefunktionaltheorie (DFT), Erweiterte Hückel-Methode (EHT), Elektronischer Transport, Nichtgleichgewichts-Green-Funktion (NEGF), Effektive-Massen-Schrödinger-Gleichung}
+\newcommand{\dckeywords}{Enter Keywords Here}
 
 %%======================================================================
 % Einstellungen des Hyperref-Paketes
