--- a/masterthesis-erik-lorenz.tex
+++ b/masterthesis-erik-lorenz.tex
@@ -130,7 +130,7 @@
 %  user.sty
 %======================================================================
 
-\usepackage{user}  % Makros in user.sty 
+\usepackage{ext/user}  % Makros in user.sty 
           % \epsinc{bild.eps}{scale=1}{Bildunterschrift}
           % \missing{Beweis fehlt noch}
           % \comment{Ein Kommentar}
@@ -184,18 +184,6 @@
   metadaten,      % Variablen setzen
   titel,      % Titelseite, Zusammenfassung und Inhaltsverzeichnis
   einleitung,
-  grundlagen_cnt,
-  grundlagen_transistor,
-  grundlagen_cntfet,
-  grundlagen_simulation,
-  grundlagen_eht,
-  grundlagen_dft,
-  grundlagen_negf,
-  grundlagen_atk,
-  grundlagen_nds,
-  grundlagen_bte,
-  ergebnisse,
-  auswertung
   % Alle per include einzulesenden Dateien müssen hier angegeben sein!
 }
 
@@ -230,18 +218,6 @@
 
 \newpage
 \include{einleitung}
-\include{grundlagen_cnt}
-\include{grundlagen_transistor}
-\include{grundlagen_cntfet}
-\include{grundlagen_simulation}
-\include{grundlagen_eht}
-\include{grundlagen_dft}
-\include{grundlagen_negf}
-\include{grundlagen_atk}
-\include{grundlagen_nds}
-\include{grundlagen_bte}
-\include{ergebnisse}
-\include{auswertung}
 
 %======================================================================
 %  Glossar
@@ -300,7 +276,7 @@
 %======================================================================
 
 %\addcontentsline{toc}{chapter}{C. Selbständigkeitserklärung}
-\chapter{Selbstständigkeitserklärung}
+%\chapter{Selbstständigkeitserklärung}
 %\includepdf[pagecommand={}]{selbststaendigkeitserklaerung.pdf}
 %\stepcounter{page}
 %\includepdf{selbststaendigkeitserklaerung.pdf}
