chapters and sections added

--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -28,9 +28,11 @@
 	\include{contents}
 
 	\include{einleitung}
+	\include{theory}
+	\include{potentials}
+	\include{results}
 
 	\include{bibliography}
-
 	\include{appendix}
 
 \end{document}
